--- a/src/components/NewTodo.module.css
+++ b/src/components/NewTodo.module.css
@@ -28,7 +28,7 @@
   font: inherit;
   background-color: #ebb002;
   border: 1px solid #ebb002;
-  color: #201d0f;
+  color: black;
   padding: 0.5rem 1.5rem;
   border-radius: 4px;
   cursor: pointer;
