--- a/src/components/ToDoItem.module.css
+++ b/src/components/ToDoItem.module.css
@@ -1,6 +1,25 @@
 .item {
-    margin: 1rem 0;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-    padding: 1rem;
-    background-color: #f7f5ef;
-  }
+  box-sizing: border-box;
+  width: 190px;
+  height: 254px;
+  background: #f7f5ef;
+  border: 1px solid white;
+  box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
+  backdrop-filter: blur(6px);
+  border-radius: 17px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.5s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+  font-weight: bold;
+  color: black;
+  flex-direction: column;
+}
+
+.item:hover {
+  border: 1px solid #494844;
+  transform: scale(1.05);
+}
