--- a/src/components/ToDos.module.css
+++ b/src/components/ToDos.module.css
@@ -3,4 +3,8 @@
   margin: 2rem auto;
   padding: 0;
   width: 40rem;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 10px;
+  row-gap: 15px;
 }
